--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@ repositories {
 dependencies {
     testImplementation (
             "com.codeborne:selenide:6.1.1",
-            "org.junit.jupiter:junit-jupiter-api:5.8.2")
+            "org.junit.jupiter:junit-jupiter-api:5.8.2",
+            "com.github.javafaker:javafaker:0.12")
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.2"
     implementation 'org.slf4j:slf4j-log4j12:1.7.29'
 }
